// protoc --go_out=. --go-grpc_out=require_unimplemented_servers=false:. ./common/user/rpc/proto/*.proto
syntax = "proto3";

option go_package = "common/user/rpc/proto;userPB";

package user;

// 创建用户传入参数
message CreateUserReq{
  string LoginName = 1;  // 登陆名称
  string ShowName = 2;   // 用户名称
  string Password = 3;   // 密码
  string Mobile = 4;     // 手机号
  string  Desc = 5;      // 备注
  int64 GroupId = 6;     // 所属用户组
}

// 创建用户返回参数
message CreateUserResp{
  int64 Id = 1;  // 用户ID
}

// 删除用户传入参数
message DeleteUserReq {
  int64 Id = 1;  // 用户ID
}

// 删除用户返回参数
message DeleteUserResp {
  int64 Id = 1;  // 用户ID
}

// 更新用户传入参数
message UpdateUserReq {
  RetrieveUserResp user = 1;
}

// 更新用户组返回参数
message UpdateUserResp {
  int64 Id = 1;  // 用户组ID
}

// 查询用户详情传入参数
message RetrieveUserReq{
  int64 Id = 1;
}

// 查询用户详情返回参数
message RetrieveUserResp{
  int64 Id = 1;            // 用户ID
  string LoginName = 2;    // 登陆名称
  string ShowName = 3;     // 用户名称
  string Password = 4;     // 密码
  string Mobile = 5;       // 手机号
  string Desc = 6;         // 备注
  int64 GroupId = 7;       // 所属用户组
  int64 CreateUser = 8;    // 创建用户ID
  int64 UpdateUser = 9;    // 更新用户ID
  int64 CreateGroup = 10;  // 创建用户组ID
  int64 UpdateGroup = 11;  // 更新用户组ID
  int64 CreateAt = 12;     // 创建时间
  int64 UpdateAt = 13;     // 更新时间
}

// 用户服务
service User{
  rpc create(CreateUserReq) returns(CreateUserResp);  // 创建用户
  rpc retrieve(RetrieveUserReq) returns(RetrieveUserResp); // 查询用户详情
  rpc delete(DeleteUserReq) returns(DeleteUserResp);  // 删除用户
  rpc update(UpdateUserReq) returns(UpdateUserResp); // 更新用户
}